--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color:
 
 @media screen and (min-width: 65em) { .philosophy img { -webkit-transform: translateY(-4em); -ms-transform: translateY(-4em); transform: translateY(-4em); } }
 
-form { margin-top: 1.5em; }
+form { margin-top: 1.5em; margin-bottom: 1em; }
 form input { appearance: none; border: none; margin: 0; padding: 0; border-bottom: 2px rgba(0, 0, 0, 0.24) solid; font-family: "sans", sans-serif; font-weight: 600; font-size: 1em; color: rgba(0, 0, 0, 0.24); line-height: 1.25em; letter-spacing: 0.0625em; background: none; text-transform: uppercase; padding-bottom: 0.375em; border-radius: 0; width: 70%; }
 form input:focus { outline: none; border-bottom: 2px rgba(0, 0, 0, 0.87) solid; color: rgba(0, 0, 0, 0.87); }
 form button, form input.button { appearance: none; background: none; border: none; padding: 0; padding-top: 0.875em; font-family: "sans", sans-serif; font-weight: 800; font-size: 1em; color: rgba(0, 0, 0, 0.87); line-height: 20px; letter-spacing: 0.0625em; text-transform: uppercase; text-align: left; }
